--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,6 @@
     <body>
         <h1 style="color: blue; text-align: center;">Bem vindo a este WebPage</h1>
         Teste arquivo GitHub.
+        <h2 style="color: green">Novo Heading na cor verde</h2>
     </body>
 </html>
