--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,19 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            h1 {
+                color: red;
+                text-align: left;
+            }
+            h2 {
+                color: red;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color: blue; text-align: left;">Bem vindo a este WebPage!!!!</h1>
+        <h1>Bem vindo a este WebPage!!!!</h1>
         Teste arquivo GitHub.
-        <h2 style="color: green">Novo Heading na cor verde</h2>
+        <h2>Novo Heading na cor verde</h2>
     </body>
 </html>
